# ort_dart

./: CHANGELOG.md  README.md  pubspec.yaml
.github/workflows/: precompile_binaries.yaml
android/: build.gradle
cargokit/build_tool/lib/src/: artifacts_provider.dart  build_tool.dart  builder.dart  environment.dart  ort_binaries.dart  target.dart
example/android/app/: build.gradle.kts
example/integration_test/: simple_test.dart  tensor_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: ort.podspec
lib/: ort.dart
lib/src/api/: session.dart  tensor.dart
lib/src/api/execution_providers/: execution_providers.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: debug.dart  execution_providers.dart  execution_providers.freezed.dart  session.dart  tensor.dart
macos/: ort.podspec
rust/: .gitignore  Cargo.toml  ort_dist.yaml
rust/src/: frb_generated.rs
rust/src/api/: debug.rs  mod.rs  tensor.rs
rust/src/api/execution_providers/: mod.rs
rust/src/api/session/: mod.rs
