[package]
name = "ort_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
ort = { version = "2.0.0-rc.10" }
paste = "1.0.15"
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
ndarray = "0.16.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
